--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,18 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  # Manual trigger via GitHub UI
+  workflow_dispatch:
+    inputs:
+      force-evolve:
+        description: "Run AI-patch loop even if tests pass"
+        required: false
+        default: "false"
+  # Nightly automated evolution
+  schedule:
+    - cron: "0 3 * * *"   # daily 03:00 UTC evolution pass
 
 jobs:
   test-and-auto-fix:
@@ -29,6 +41,11 @@ jobs:
         if: steps.testrun.outputs.failures == 'true'
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          MAX_ITERS: "100"
+          PATIENCE: "7"
+          OPENAI_MODEL: "gpt-4o-mini"
+          # propagate manual-trigger flag
+          FORCE_EVOLVE: ${{ github.event.inputs.force-evolve }}
         run: |
           python .github/tools/ai_patch.py
 
