Add detailed logging to AI evolution system
- Enable DEBUG_LOG and VERBOSE output in CI
- Add fitness data analysis during evolution
- Enhanced iteration logging with emojis and stats
- Show patch details, test results, and accuracy info
- Better visibility into evolution process

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,9 @@ jobs:
           OPENAI_MODEL:   gpt-4.1
           MAX_TOKENS:     "4096"
           FORCE_EVOLVE:   ${{ github.event.inputs.force-evolve }}
+          DEBUG_LOG:      "1"
+          MAX_ITERS:      "10"
+          VERBOSE:        "1"
         run: |
           python .github/tools/ai_patch_loop.py
 
