--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,14 +47,8 @@ jobs:
       - name: Run self-healing AI loop
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL:   gpt-4.1
-          MAX_TOKENS:     "4096"
-          FORCE_EVOLVE:   ${{ github.event.inputs.force-evolve }}
-          DEBUG_LOG:      "1"
-          MAX_ITERS:      "10"
-          VERBOSE:        "1"
-        run: |
-          python .github/tools/ai_patch_loop.py
+          FORCE_EVOLVE:   1           # always iterate
+        run: python .github/tools/ai_patch_loop.py
 
       # ------------------------------------------------------------
       # Publish the detailed evolve logs so maintainers can inspect
